--- a/3.sarajevo/css/styles.css
+++ b/3.sarajevo/css/styles.css
@@ -594,8 +594,9 @@ header {
 
 .facts-content{
     position: relative;
-    color: white;
-    z-index: 2;
+	color: white;
+	text-align: center;
+	z-index: 2;
 }
 
 .facts-title h2 {
@@ -624,17 +625,25 @@ header {
 }
 
 .circles {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
     padding-top: 55px;
 }
 
 
-.circles img {
-    border: 1px solid #fff;
-    border-radius: 50%;
-    width: 50%;
+.circles i {
+	border: 1px solid #fff;
+	border-radius: 50%;
+	color: #fff;
+    height: 98px;
+	line-height: 98px;
+	margin-bottom: 35px;
+	text-align: center;
+	width: 98px;
+}
+
+.circles-view {
+	display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .circles p {
@@ -1076,6 +1085,30 @@ header {
 	.branding-img, .development-img, .consulting-img {
 		margin-right: 39px;
 	}
+
+	.facts {
+		height: 1230px;
+	}
+
+	.facts-number {
+		font-size: 40px;
+	}
+
+	.facts-text {
+		font-size: 11px
+	}
+
+	.circles-view {
+		flex-direction: column;
+	}
+
+	.circles i {
+		height: 85px;
+		line-height: 85px;
+		margin-top: 48px;
+		width: 85px;
+	}
+
 
 	.team-cards-view {
 		flex-flow: wrap;
