--- a/3.sarajevo/css/styles.css
+++ b/3.sarajevo/css/styles.css
@@ -461,44 +461,56 @@ header {
     border-radius: 10px;
 }
 
+.portfolio-items {
+	display: flex;
+	flex-wrap: wrap;
+}
+
 .portfolio .portfolio-items, .portfolio .portfolio-item {
     margin: 0;
     padding: 0;
     list-style-type: none;
 }
 
-.portfolio .portfolio-item {
-    display: inline-flex;
-    flex-direction: column;
-    overflow: hidden;
+.portfolio .portfolio-item  {
 	position: relative;
-    width: 300px;
+	width: 25%;
 }
 
-.portfolio img {
-    display: block;
-    max-width: 100%;
+.portfolio .portfolio-item img {
+	height: 100%;
+	left: 0;
+	overflow: hidden;
+	position: relative;
+	top: 0;
+	width: 100%;
 }
 
 .portfolio-item_hidden {
     display: none;
 }
 
-.descr {
-    background-color: rgba(88, 124, 247, 0.5);
-    color: #fff;
-    height: 100%;
-    left: 0;
+.portfolio-descr {
+	background-color: rgba(88, 124, 247, 0.5);
+	display: flex;
+	height: 100%;
+	flex-direction: column;
+	justify-content: center;
+	left: 0;
+	opacity: 0;
     position: absolute;
-    padding-top: 80px;
-    text-align: center;
-    top: 100%;
-    transition: all .5s;
-    opacity: 0;
-    width: 100%;
+	text-align: center;
+	top: 100%;
+	transition: all .5s;
+	width: 100%;
 }
 
-.portfolio .portfolio-item:hover .descr {
+.portfolio-descr .descr {
+	color: #fff;
+	padding-bottom: 10px;
+}
+
+.portfolio .portfolio-item:hover .portfolio-descr {
     opacity: 1;
     top: 0;
 }
