--- a/4.tinyone/app/sass/main.sass
+++ b/4.tinyone/app/sass/main.sass
@@ -1,6 +1,7 @@
 *
     margin: 0
     padding: 0
+    box-sizing: border-box
 
 a
     text-decoration: none
@@ -11,6 +12,9 @@ a
 
 ul
     list-style-type: none
+
+main
+    z-index: 3
 
 .container
     max-width: 930px
@@ -27,6 +31,11 @@ ul
     src: url(../fonts/SourceSansPro-Regular.ttf)
     font-weight: 400
 
+@font-face 
+    font-family: 'FontAwesome'
+    src: url(../fonts/font-awesome/fonts/fontawesome-webfont.ttf)
+    font-weight: 400
+    
 .sticky
     position: fixed
     width: 100%
@@ -34,6 +43,7 @@ ul
     box-shadow: 3px 1px 0.99px 0.01px rgba(0, 0, 0, 0.05)
     padding: 20px 0px
     top: 0
+    z-index: 1
 
 .sticky-menu
     display: flex
@@ -43,10 +53,11 @@ ul
     max-height: 90px
     height: 100%    
 
-    &__social_link
-        display: flex
+
+.social-list
+    display: flex
     
-    &__social_link_item
+    &__item
         padding-right: 20px
 
         &:last-child
@@ -76,6 +87,7 @@ ul
     flex-direction: column
     align-items: center
     background: #fcdb00
+    z-index: 2
 
     &__title
         font-family: 'SourceSansPro'
@@ -116,6 +128,437 @@ ul
         cursor: pointer
         margin-bottom: 58px
 
-.features__view
+
+.all__headline
+    font-family: 'SourceSansPro'
+    font-size: 32px
+    font-weight: 700
+    color: #010101
+    text-align: center
+    margin-top: 114px
+
+.all__text
+    font-family: 'SourceSansPro'
+    font-size: 20px
+    font-weight: 400
+    color: #898989
+    text-align: center
+    max-width: 720px
+    width: 100%
+    margin: 0 auto
+    padding-top: 18px
+    padding-bottom: 90px
+    
+.features__list
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-around
+
+.item-features
+    display: flex
+
+    &__img
+        padding-right: 30px
+        padding-top: 6px
+
+    &__title
+        font-family: 'SourceSansPro'
+        font-size: 22px
+        font-weight: 700
+        color: #010101
+        padding-bottom: 18px
+    
+    &__descr
+        font-family: 'SourceSansPro'
+        font-size: 16px
+        font-weight: 400
+        color: #898989
+        max-width: 200px
+        width: 100%
+        margin: 0 auto
+
+.features__item
+    flex-basis: 270px
+    padding-bottom: 20px
+
+.pricing__list
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+
+.item-pricing
+    flex-wrap: wrap
+    text-align: center
+
+    &__img
+        font-size: 48px
+        color: #010101
+        height: 112px
+        width: 112px
+        border-radius: 50%
+        text-align: center
+        background: #ebebeb
+
+        &:before
+            line-height: 100px
+
+        &:hover
+            background: #010101
+            color: #fff
+
+    &__title
+        font-family: 'SourceSansPro'
+        font-size: 24px
+        font-weight: 700
+        color: #010101
+        padding: 18px 0 18px 0
+
+    &__descr
+        font-family: 'SourceSansPro'
+        font-size: 14px
+        font-weight: 400
+        color: #898989
+        max-width: 170px
+        margin: auto
+        width: 100%
+        padding-bottom: 36px
+
+    &__price
+        font-family: 'SourceSansPro'
+        font-size: 32px
+        font-weight: 700
+        color: #010101
+        max-width: 72px
+        margin: 0 auto
+        width: 100%
+        padding-bottom: 10px
+        text-transform: uppercase
+        border-bottom: 2px solid #010101
+        
+    &__text
+        font-family: 'SourceSansPro'
+        font-size: 16px
+        font-weight: 400
+        color: #898989
+        margin: 0 auto
+        padding-bottom: 36px
+        padding-top: 8px
+
+    &__btn
+        outline: none
+        border: 2px solid #222
+        padding: 15px 34px
+        font-family: 'SourceSansPro'
+        font-size: 16px
+        font-weight: 700
+        color: #010101
+        text-transform: uppercase
+        cursor: pointer
+
+
+        &:hover
+            background: #010101
+            color: #fff
+            transition: all 0.5s
+
+.works__list
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-around
+    text-align: center
+    list-style: none
+
+
+.item-works
+    flex-basis: 220px    
+
+    &__title
+        font-family: 'SourceSansPro'
+        font-size: 22px
+        font-weight: 700
+        color: #010101
+    
+    &__descr
+        font-family: 'SourceSansPro'
+        font-size: 16px
+        font-weight: 400
+        color: #898989
+        margin: auto
+        padding-bottom: 70px
+
+.works-pic
+    position: relative
+    width: 220px
+    transition: all 0.5s
+    cursor: pointer
+
+    &__overlay
+        position: absolute
+        top: 0
+        left: 0
+        display: none
+        justify-content: center
+        align-items: center
+        width: 100%
+        height: 100%
+        background-color: #000
+        color: #fff
+    
+
+    &__content
+        transition: all 0.5s
+
+    &:hover &__overlay 
+        display: flex
+
+.match
+    display: inline-flex
+    width: 100%
+    justify-content: space-between
+    position: relative
+    bottom: 28px
+    color: #fff;
+
+    &__date
+        font-family: 'SourceSansPro'
+        font-size: 14px
+        font-weight: 400
+        color: #fff
+
+    &__count
+        font-family: 'SourceSansPro'
+        font-size: 14px
+        font-weight: 400
+        color: #fff
+
+.team
+    padding-bottom: 57px
+
+
+.team__list
+    display: flex
+    justify-content: space-around
+    text-align: center
+    flex-wrap: wrap
+
+.item-team
+    max-width: 190px
+    width: 100%
+
+    &__title
+        font-family: 'SourceSansPro'
+        font-size: 22px
+        font-weight: 400
+        color: #010101
+        padding: 18px 0 5px 0
+
+    &__descr
+        font-family: 'SourceSansPro'
+        font-size: 16px
+        font-weight: 400
+        color: #898989
+        padding-bottom: 10px
+
+    &__text
+        font-family: 'SourceSansPro'
+        font-size: 14px
+        font-weight: 400
+        color: #313841
+        max-width: 170px
+        width: 100%
+
+    &__social
+        padding-top: 13px
+
+.social__f, .social__tw
+    padding-right: 13px
+
+.testimonial
+    padding-bottom: 57px
+
+.testimonial__list
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-around
+    text-align: center
+
+.testimonial-item__num
+    font-family: 'SourceSansPro'
+    font-size: 24px
+    font-weight: 700
+    color: #010101
+    padding: 18px 0 5px 0
+
+.testimonial-item__descr
+    font-family: 'SourceSansPro'
+    font-size: 14px
+    font-weight: 400
+    color: #898989
+
+.feedback
+    margin-top: 72px
+    text-align: center
+
+    &-content
+        display: flex
+        justify-content: center
+        padding-top: 36px
+
+    &-list__text
+        max-width: 486px
+        width: 100%
+        font-family: 'SourceSansPro'
+        font-size: 20px
+        font-weight: 400
+        color: #898989
+
+    &-list__icon--left
+        padding-right: 54px
+        color: #898989
+
+    &-list__icon--right
+        padding-left: 54px
+        position: relative
+        top: 58px
+        color: #898989
+
+
+.contact__list
+    display: flex
+    justify-content: space-between
+    text-align: center
+    flex-wrap: wrap
+
+    &-item__icon
+        padding-bottom: 18px
+
+    &-item__title
+        font-family: 'SourceSansPro'
+        font-size: 24px
+        font-weight: 400
+        color: #010101
+
+    &-item__descr
+        max-width: 170px
+        width: 100%
+        font-family: 'SourceSansPro'
+        font-size: 14px
+        font-weight: 400
+        color: #898989
+
+.contact__form
+    display: flex
+    max-width: 480px
+    width: 100%
+    flex-direction: column
+    margin: auto
+    padding-top: 60px
+    font-family: 'SourceSansPro'
+    font-size: 16px
+    font-weight: 400
+    color: #898989
+
+    &--email
+        margin-bottom: 30px
+        padding: 10px 0 10px 5px
+        border: 2px solid #000
+
+    &--text
+        margin-bottom: 30px
+        padding: 10px 0 10px 5px
+        border: 2px solid #000
+
+    &--message
+        border: 2px solid #000
+        padding: 10px 0 10px 5px
+
+    &--submit
+        width: 170px
+        height: 51px
+        line-height: 55px
+        outline: none
+        background: #010101
+        color: #fff
+        font-weight: 700
+        text-transform: uppercase
+        display: block
+        margin: 0 auto
+        border: none
+        cursor: pointer
+        margin-top: 24px
+        margin-bottom: 72px
+        
+        &:hover
+            background: #fcdb00
+            color: #010101
+            transition: all 0.5s
+
+.footer
+    background-color: #010101
+
+    &__headline
+        color: #fff
+        padding-top: 90px
+
+    &__form
+        display: flex
+        justify-content: center
+        flex-wrap: nowrap
+        max-width: 756px
+        width: 100%
+        font-family: 'SourceSansPro'
+        font-size: 16px
+        font-weight: 400
+        color: #898989
+        margin: auto
+
+
+        &--input
+            padding: 18px 0 18px 18px
+            max-width: 606px
+            width: 100%
+            margin-right: 10px
+        
+        &--btn
+            padding: 18px 0 18px 18px
+            max-width: 140px
+            width: 100%
+            background-color: #fff
+            color: #000
+            text-transform: uppercase
+            border: none
+            outline: none
+            cursor: pointer
+            font-family: 'SourceSansPro'
+            font-size: 16px
+            font-weight: 700
+
+
+.footer__widgets
+    font-family: 'SourceSansPro'
+    font-size: 16px
+    font-weight: 400
+    color: #fff
+    display: flex
+    margin-top: 90px
+    justify-content: space-between
+    padding-bottom: 270px
+
+.footer__address
+    max-width: 184px
+    width: 100%
+
+.footer__links
+    display: flex
+    flex-direction: row
+
+.link__item
     display: flex
     flex-direction: column
+    padding-right: 100px
+
+    &:last-child
+        padding-right: 0
+
+    &--a:hover
+        color: #fcdb00
