--- a/4.tinyone/app/sass/main.sass
+++ b/4.tinyone/app/sass/main.sass
@@ -429,22 +429,22 @@ main
     text-align: center
     flex-wrap: wrap
 
-    &-item__icon
-        padding-bottom: 18px
+.contact-item__icon
+    padding-bottom: 18px
 
-    &-item__title
-        font-family: 'SourceSansPro'
-        font-size: 24px
-        font-weight: 400
-        color: #010101
+.contact-item__title
+    font-family: 'SourceSansPro'
+    font-size: 24px
+    font-weight: 400
+    color: #010101
 
-    &-item__descr
-        max-width: 170px
-        width: 100%
-        font-family: 'SourceSansPro'
-        font-size: 14px
-        font-weight: 400
-        color: #898989
+.contact-item__descr
+    max-width: 170px
+    width: 100%
+    font-family: 'SourceSansPro'
+    font-size: 14px
+    font-weight: 400
+    color: #898989
 
 .contact__form
     display: flex
